--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.2",
+    "clsx": "^2.1.0",
     "expo": "~50.0.11",
     "expo-dev-client": "^3.3.9",
     "expo-font": "~11.10.3",
