--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/native": "^6.0.2",
     "clsx": "^2.1.0",
     "expo": "~50.0.11",
-    "expo-dev-client": "^3.3.9",
+    "expo-dev-client": "~3.3.10",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
@@ -32,10 +32,12 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-confirmation-code-field": "^7.3.2",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-mask-input": "^1.2.3",
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-section-alphabet-list": "^3.0.0",
     "react-native-web": "~0.19.6",
     "tailwindcss": "3.3.2"
   },
